tests/pos/i12834.scala
class A(val ref: Option[B])
class B extends A(None)
