tests/neg/final-sealed.scala
final class A
class B extends A
class C extends Option[Int]

